2006-06-02  Fredrik Hedberg  <fredrik@avafan.com>

	* plugins/Recommendation/RecommendationPane.cs: Fix the url-hashing.

2006-05-25  Lukas Lipka  <lukas@pmad.net>

	* plugins/Recommendation/RecommendationPane.cs: Commit a patch from Koike
	Kazuhiko, which checks if we are still playing the same artist as we requested,
	prior to displaying the details pane.

2006-05-24  Aaron Bockover  <aaron@abock.org>

	* plugins/MiniMode/MiniModeWindow.cs: Catch any possible exception
	that GConf may throw and set a sane default value

2006-05-24  Lukas Lipka  <lukas@pmad.net>

	* plugins/Recommendation/RecommendationPlugin.cs: Fix more glitches related
	to source focus tracking. Move stuff around.

	* plugins/Recommendation/RecommendationPane.cs: Fix nasty code indenting.

2006-05-22  Aaron Bockover  <aaron@abock.org>

	* plugins/*/*.cs: Do not use Mono.Unix; be sure that all calls to
	Catalog.Get*String go through Banshee.Plugins; thanks to 
	Горан Ракић <gox@devbase.net> for making the Podcast plugin translatable
	and for providing ideas on plugin localization:
	
		http://goran.fimaks.net/moin.cgi/BansheeL10N

	* plugins/*/Makefile.am: Compile Common.cs into all assemblies

	* plugins/*/AssemblyInfo.cs.in: Moved global information to Common.cs.in

	* plugins/Makefile.am: EXTRA_DIST Common.cs.in

	* Makefile.am: Fixed ordering of SUBDIRS to the way I like it :)

	* configure.ac: generate plugins/Common.cs

	* plugins/Common.cs: Provide a wrapper class for now that works with
	both branches of Banshee; if HEAD is available, use the new 
	Mono.Gettext.Catalog API that supports gettext domains bound to 
	assemblies in order to pull translations in from banshee-plugins 
	otherwise use Mono.Unix.Catalog to pull translations from the global
	default application gettext domain (banshee)
	
2006-05-22  Aaron Bockover  <aaron@abock.org>

	* plugins/MiniMode/SourceModel.cs: Fixed model to be a Gtk.TreeStore 
	instead of a Gtk.ListStore; works without using ActiveSourceIndex 