@@ -1,3 +1,8 @@
+2006-06-13  Aaron Bockover  <aaron@abock.org>
+
+	* plugins/Radio/RadioSource.cs: Create user plugin directory if it 
+	does not exist (Todd Zullinger, BGO #344725)
+
 2006-06-02  Fredrik Hedberg  <fredrik@avafan.com>
 
 	* plugins/Recommendation/RecommendationPane.cs: Fix the url-hashing.
